[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/SpaceGunOBJs/blueGunBase.tres" type="ArrayMesh" id=1]
[ext_resource path="res://assets/SpaceGunOBJs/blasterH.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/SpaceGunOBJs/blasterJ.obj" type="ArrayMesh" id=3]
[ext_resource path="res://src/player/ui/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/player/player.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/fastShootNoiseAirPods.wav" type="AudioStream" id=9]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
flags_no_depth_test = true
vertex_color_use_as_albedo = true

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.732043 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.012, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1.10957 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.017, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.019, 0 ), Vector3( 0, 0.01, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "shootblue"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("laserSight:material/0:albedo_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1 ),
"transitions": PoolRealArray( 0.25, 0.143587, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0.407843, 0.980392, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "shootred"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("laserSight:material/0:albedo_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1 ),
"transitions": PoolRealArray( 0.25, 0.143587, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "shootyellow"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("laserSight:material/0:albedo_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1 ),
"transitions": PoolRealArray( 0.25, 0.143587, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.92549, 0.976471, 0.0588235, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.1, 0.1, 100 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 1, 3, 1 )

[sub_resource type="Animation" id=11]
resource_name = "shake1"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("head/Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.07, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.002, 0, 0 ), Vector3( -0.002, 0.02, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="player" type="KinematicBody" groups=[
"player",
]]
script = ExtResource( 5 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="head"]
current = true
far = 8192.0

[node name="UI" parent="head/Camera" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="crossHair" type="Sprite3D" parent="head"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -100 )
material_override = SubResource( 1 )
texture = ExtResource( 6 )

[node name="sniperRay" type="RayCast" parent="head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00998521, 0 )
enabled = true
cast_to = Vector3( 0, 0, -500 )
collide_with_areas = true

[node name="gunManager" type="Spatial" parent="head"]

[node name="gunPos" type="Position3D" parent="head/gunManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.422564, -3.07423 )

[node name="blueGun" type="MeshInstance" parent="head/gunManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4145, -0.670711 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null

[node name="redGun" type="MeshInstance" parent="head/gunManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4145, -0.670711 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="yellowGun" type="MeshInstance" parent="head/gunManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4145, -0.670711 )
mesh = ExtResource( 3 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="gunAnimPlayer" type="AnimationPlayer" parent="head/gunManager"]
anims/idle = SubResource( 2 )
anims/shoot = SubResource( 3 )
anims/walking = SubResource( 4 )

[node name="meshFlasher" type="AnimationPlayer" parent="head/gunManager"]
anims/shootblue = SubResource( 5 )
anims/shootred = SubResource( 6 )
anims/shootyellow = SubResource( 7 )

[node name="laserSight" type="MeshInstance" parent="head/gunManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.593562, -50.0638 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 10 )

[node name="floorChecker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0 )
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="gunTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="shootNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 2.0
pitch_scale = 0.6
autoplay = true

[node name="camShakePlayer" type="AnimationPlayer" parent="."]
anims/shake1 = SubResource( 11 )
